--- a/app/src/main/res/layout/activity_public_service_apply_base_info.xml
+++ b/app/src/main/res/layout/activity_public_service_apply_base_info.xml
@@ -13,123 +13,117 @@
         >
 
         <TextView
-            android:id="@+id/title_reimb_project_txt"
+            android:id="@+id/title_public_service_apply_depart_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_reimb_project_edit"
-            android:text="@string/title_business_travel_reimb_project"
+            android:layout_alignBaseline="@id/content_public_service_apply_depart_edit"
+            android:text="@string/title_public_service_apply_depart"
             android:textColor="@color/color_black_title"
             android:textSize="@dimen/custom_apply_title_text_size" />
 
         <EditText
-            android:id="@+id/content_reimb_project_edit"
+            android:id="@+id/content_public_service_apply_depart_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/apply_title_content_margin"
             android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:layout_toRightOf="@id/title_reimb_project_txt"
+            android:layout_toRightOf="@id/title_public_service_apply_depart_txt"
             android:textColor="@color/color_black_content"
             android:textSize="@dimen/custom_apply_content_text_size" />
 
         <EditText
-            android:id="@+id/content_reimb_cash_pay_edit"
+            android:id="@+id/content_public_service_apply_time_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_reimb_project_edit"
-            android:layout_below="@id/content_reimb_project_edit"
+            android:layout_alignLeft="@id/content_public_service_apply_depart_edit"
+            android:layout_below="@id/content_public_service_apply_depart_edit"
             android:layout_marginTop="@dimen/custom_apply_item_margin"
             android:textColor="@color/color_black_content"
             android:textSize="@dimen/custom_apply_content_text_size" />
 
         <TextView
-            android:id="@+id/title_reimb_cash_pay_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_reimb_cash_pay_edit"
-            android:layout_below="@id/content_reimb_project_edit"
-            android:text="@string/title_business_travel_reimb_cash_pay"
+            android:layout_alignBaseline="@id/content_public_service_apply_time_edit"
+            android:layout_below="@id/content_public_service_apply_depart_edit"
+            android:text="@string/title_public_service_apply_reception_time"
             android:textColor="@color/color_black_title"
             android:textSize="@dimen/custom_apply_title_text_size" />
 
         <EditText
-            android:id="@+id/content_transfer_account_edit"
+            android:id="@+id/content_public_service_apply_received_depart_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_reimb_cash_pay_edit"
-            android:layout_below="@id/content_reimb_cash_pay_edit"
+            android:layout_alignLeft="@id/content_public_service_apply_time_edit"
+            android:layout_below="@id/content_public_service_apply_time_edit"
             android:layout_marginTop="@dimen/custom_apply_item_margin"
             android:textColor="@color/color_black_content"
             android:textSize="@dimen/custom_apply_content_text_size" />
 
         <TextView
-            android:id="@+id/title_transfer_account_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_transfer_account_edit"
-            android:layout_below="@id/content_reimb_cash_pay_edit"
-            android:text="@string/title_business_travel_reimb_transfer_account"
+            android:layout_alignBaseline="@id/content_public_service_apply_received_depart_edit"
+            android:layout_below="@id/content_public_service_apply_time_edit"
+            android:text="@string/title_public_service_apply_received_depart"
             android:textColor="@color/color_black_title"
             android:textSize="@dimen/custom_apply_title_text_size" />
 
         <EditText
-            android:id="@+id/content_reimb_card_edit"
+            android:id="@+id/content_public_service_apply_address_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_transfer_account_edit"
-            android:layout_below="@id/content_transfer_account_edit"
+            android:layout_alignLeft="@id/content_public_service_apply_received_depart_edit"
+            android:layout_below="@id/content_public_service_apply_received_depart_edit"
             android:layout_marginTop="@dimen/custom_apply_item_margin"
             android:textColor="@color/color_black_content"
             android:textSize="@dimen/custom_apply_content_text_size" />
 
         <TextView
-            android:id="@+id/title_reimb_card_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_reimb_card_edit"
-            android:layout_below="@id/content_reimb_card_edit"
-            android:text="@string/title_business_travel_reimb_card_pay"
+            android:layout_alignBaseline="@id/content_public_service_apply_address_edit"
+            android:layout_below="@id/content_public_service_apply_received_depart_edit"
+            android:text="@string/title_public_service_apply_reception_address"
+            android:textColor="@color/color_black_title"
+            android:textSize="@dimen/custom_apply_title_text_size" />
+
+
+        <EditText
+            android:id="@+id/content_public_service_apply_content_edit"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/custom_apply_text_area_height"
+            android:layout_alignLeft="@id/content_public_service_apply_address_edit"
+            android:layout_below="@id/content_public_service_apply_address_edit"
+            android:layout_marginTop="@dimen/custom_apply_item_margin"
+            android:textColor="@color/color_black_content"
+            android:textSize="@dimen/custom_apply_content_text_size" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/content_public_service_apply_content_edit"
+            android:layout_below="@id/content_public_service_apply_address_edit"
+            android:text="@string/title_public_service_apply_reception_content"
             android:textColor="@color/color_black_title"
             android:textSize="@dimen/custom_apply_title_text_size" />
 
         <EditText
-            android:id="@+id/content_reimb_net_edit"
+            android:id="@+id/content_public_service_apply_basis_edit"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_reimb_card_edit"
-            android:layout_below="@id/content_reimb_card_edit"
+            android:layout_height="@dimen/custom_apply_text_area_height"
+            android:layout_alignLeft="@id/content_public_service_apply_content_edit"
+            android:layout_below="@id/content_public_service_apply_content_edit"
             android:layout_marginTop="@dimen/custom_apply_item_margin"
             android:textColor="@color/color_black_content"
             android:textSize="@dimen/custom_apply_content_text_size" />
 
         <TextView
-            android:id="@+id/title_reimb_net_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_reimb_net_edit"
-            android:layout_below="@id/content_reimb_card_edit"
-            android:text="@string/title_business_travel_reimb_net_pay"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
-
-        <TextView
-            android:id="@+id/content_sum_account_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_reimb_net_edit"
-            android:layout_below="@id/content_reimb_net_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:text="￥2345"
-            android:textColor="@color/colorAccent"
-            android:textSize="@dimen/custom_reimb_amount_text_size"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/title_sum_account_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_sum_account_txt"
-            android:layout_below="@id/content_reimb_net_edit"
-            android:text="@string/title_business_travel_reimb_sum_acount"
+            android:layout_alignBaseline="@id/content_public_service_apply_basis_edit"
+            android:layout_below="@id/content_public_service_apply_content_edit"
+            android:text="@string/title_public_service_apply_reception_basis"
             android:textColor="@color/color_black_title"
             android:textSize="@dimen/custom_apply_title_text_size" />
 
@@ -138,14 +132,15 @@
             android:layout_width="@dimen/custom_apply_next_btn_width"
             android:layout_height="@dimen/custom_apply_next_btn_height"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/content_sum_account_txt"
+            android:layout_below="@id/content_public_service_apply_basis_edit"
             android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
             android:background="@drawable/bg_next_btn"
             android:gravity="center"
             android:text="@string/btn_next"
+            android:textColor="@android:color/black"
             android:textSize="@dimen/custom_apply_next_btn_text_size"
             android:textStyle="bold" />
-    </RelativeLayout>
 
+    </RelativeLayout>
 
 </layout>
